[package]
name = "rtree"
version = "0.0.1"
description = "A Directory listing program written in Rust, inspired by the Unix `tree` command."
edition = "2024"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
confy = "^0.6"
terminal-link = "0.1.0"

[dev-dependencies]
tempfile = "3.8"

